# evoten

./: .gitignore  DOCS_DEPLOYMENT.md  README.md  al_gen_n50.fa  margs_problem.ipynb  pyproject.toml
.github/workflows/: docs.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst
evoten/: __init__.py  backend.py  backend_pytorch.py  backend_tf.py  expm_gtr.py  model.py  substitution_models.py  tree_handler.py  util.py
evoten/data/: LG.model
tensortree/: __init__.py  backend_pytorch.py  backend_tf.py  model.py  substitution_models.py  tree.py  tree_handler.py  util.py
test/: example.ipynb  unittests.py
test/benchmark/: PF00008.fasta  PF00008.fasta.raxml.bestTree  PF00028.fasta.raxml.bestTree  benchmark.ipynb  benchmark_comp.ipynb  benchmark_cpu.ipynb  maximum_likelihood.ipynb  message_passing.ipynb
test/data/: LG_with_factor.model  PF00008_gen.fa  PF00008_gen.unaligned.fa  PF00028.fasta  PF00028_gen.fa  PF00028_gen.unaligned.fa  PF00028_gen_const.fa  PF00028_gen_const.unaligned.fa  simple2.tree  simple3.tree  simple4.tree  star.tree
test/training/: RAxML_bestTree.out2  seq-gen.out  train_pytorch_DNA.ipynb  train_tf_DNA.ipynb
