[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensortree"
version = "0.0.1"
authors = [
  { name="Felix Becker", email="beckerfelix94@gmail.com" },
]
description = "Vectorized, differentiable computation of tree likelihoods supporting different computation backends."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/felbecker/TensorTree"
Issues = "https://github.com/felbecker/TensorTree/issues"