[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evoten"
version = "0.0.1"
authors = [
  { name="Felix Becker", email="beckerfelix94@gmail.com" },
]
description = "Vectorized, differentiable computation of tree likelihoods supporting different computation backends."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["numpy", "biopython"]

[project.optional-dependencies]
tensorflow = ["tensorflow[and-cuda]"]
torch = ["torch"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://github.com/felbecker/TensorTree"
Issues = "https://github.com/felbecker/TensorTree/issues"

[tool.hatch.build.targets.wheel]
packages = ["evoten"]